# Support_customer_agent

./: .env.example  .gitignore  README.md  STAGE1_REPORT.md  STAGE2_REPORT.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: agent-spec.json
data/seeds/: handoffs.json  order_items.json  orders.json  return_requests.json  support_tickets.json
docs/: design-decisions.md  entities.md  implementation-plan.md  intents.md  routing-policy.md  safety-policy.md  scope.md  stage1-mock-data.md  stage2-mock-data.md  tool-policy.md  use-cases.md
evaluation/: README.md
evaluation/datasets/: behavior_cases.jsonl  smoke_cases.jsonl
evaluation/reports/: behavior_cases_coverage.json
evaluation/schemas/: behavior-case.schema.json
evaluation/scripts/: validate_behavior_cases.py
schemas/: agent-state.schema.json
scripts/: setup.ps1  setup.sh
src/support_agent/: __init__.py  cli.py  config.py
src/support_agent/db/: __init__.py  connection.py  schema.sql  seed.py  validation.py
src/support_agent/models/: __init__.py  domain.py
src/support_agent/repositories/: __init__.py  audit.py  base.py  handoffs.py  orders.py  returns.py  tickets.py
src/support_agent/services/: __init__.py  idempotency.py  return_eligibility.py
tests/: conftest.py  test_audit_repository.py  test_db_validation.py  test_order_repository.py  test_return_eligibility.py  test_seed_data.py  test_write_repositories.py
